--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <div class="container">
     <div class="form-container">
         <h1>הזמנה</h1>
-        <form id="orderForm">
+        <form style="direction: rtl" id="orderForm">
             <label>שם המזמין:
                 <input type="text" id="customerName" required>
             </label>
