--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <div class="container">
     <div class="form-container">
         <h1>הזמנה</h1>
-        <form id="orderForm">
+        <form style="direction: rtl" id="orderForm">
             <label style="direction: rtl">שם המזמין:
                 <input style="direction: rtl" type="text" id="customerName" required>
             </label>
@@ -182,7 +182,7 @@
             <h2>רשימת מוצרים</h2>
             <div id="productList"></div>
 
-            <div id="totalPriceContainer">
+            <div class="align-center" id="totalPriceContainer">
                 <div id="totalPriceLabel">סה"כ לתשלום:</div>
                 <div id="preTaxPrice">סה"כ לתשלום ללא מע"מ: 0 ש"ח</div>
                 <div id="totalPriceWithTax">סה"כ לתשלום כולל מע"מ: 0 ש"ח</div>
@@ -193,7 +193,7 @@
                 </label>
             </div>
 
-            <button type="submit">שלח הזמנה</button>
+            <button class="align-center" type="submit">שלח הזמנה</button>
         </form>
     </div>
     <div class="image-container hide">
