--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
             <h2>רשימת מוצרים</h2>
             <div id="productList"></div>
 
-            <div class="align-center" id="totalPriceContainer">
-                <div id="totalPriceLabel">סה"כ לתשלום:</div>
+            <div  id="totalPriceContainer">
+                <div style=" text-align: center;" id="totalPriceLabel">סה"כ לתשלום:</div>
                 <div id="preTaxPrice">סה"כ לתשלום ללא מע"מ: 0 ש"ח</div>
                 <div id="totalPriceWithTax">סה"כ לתשלום כולל מע"מ: 0 ש"ח</div>
             </div>
@@ -201,7 +201,7 @@
     </div>
 </div>
 
-<script>
+<script style="direction: rtl">
     const productList = {
         pharmacy: [
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold: 100},
