--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            direction: rtl
         }
         .product input[type="number"] {
             width: 60px;
