--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
 </div>
 
-<script>
+<script direction: rtl>
     const productList = {
         pharmacy: [
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold: 100},
