--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     </div>
 </div>
 
-<script direction: rtl>
+<script style="direction: rtl ;">
     const productList = {
         pharmacy: [
-            {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold: 100},
+            {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice: 12.90, bulkThreshold: 100},
-            {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90},
+            {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
