--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/b332f504a2a406ab91768f558f4d4fa3d22f6376/%D7%91%D7%AA%D7%99%20%D7%9E%D7%A8%D7%A7%D7%97%D7%AA.jpeg'; // החלף לכתובת התמונה האמיתית
+            pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'future_pharmacy') {
             pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/136a2a41ad432a1901eecd81ceaf35e1f2fe9d31/%D7%A8%D7%95%D7%A7%D7%97%D7%99%D7%9D%20%D7%A2%D7%AA%D7%99%D7%93.jpeg'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/b332f504a2a406ab91768f558f4d4fa3d22f6376/%D7%91%D7%AA%D7%99%20%D7%9E%D7%A8%D7%A7%D7%97%D7%AA.jpeg'; // החלף לכתובת התמונה האמיתית
+            pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
