--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         if (placeType === 'pharmacy') {
             pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/136a2a41ad432a1901eecd81ceaf35e1f2fe9d31/%D7%A8%D7%95%D7%A7%D7%97%D7%99%D7%9D%20%D7%A2%D7%AA%D7%99%D7%93.jpeg'; // החלף לכתובת התמונה האמיתית
+            pharmacyImage.src = 'רוקחים עתיד.jpeg'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'shrem_pharmacy') {
             pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         }
