--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         if (placeType === 'pharmacy') {
             pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'רוקחים עתיד.jpeg'; // החלף לכתובת התמונה האמיתית
+            pharmacyImage.src = 'טופס הזמנה רוקחים עתיד .pdf.png'; // החלף לכתובת התמונה האמיתית
         } else if (placeType === 'shrem_pharmacy') {
             pharmacyImage.src = 'בתי מרקחת.jpeg'; // החלף לכתובת התמונה האמיתית
         }
