--- a/index.html
+++ b/index.html
@@ -148,33 +148,38 @@
             justify-content: left;
         }
         #pharmacyImage {
-            display: none;
-            height: 100%;
-            width:auto;
-            border-radius: 8px;
+            width: 100%;
+            height: 100%; /* גובה מלא של התמונה */
+            object-fit: cover; /* התאמת התמונה למיכל */
         }
+        /* הערות למובייל */
         @media (max-width: 600px) {
             .container {
-                flex-direction: column;
-                padding: 10px;
+                flex-direction: column; /* מסדר את התוכן בצורה עמודית */
+                padding: 10px; /* מקטין את הריפוד */
+                margin-top: 320px; /* מוסיף מרווח מעלית */
             }
             h1, h2 {
-                font-size: 1.5em;
+                font-size: 1.5em; /* מקטין את גודל הכותרות */
             }
             label {
-                margin: 10px 0 5px;
+                margin: 10px 0 5px; /* מקטין את המרווח בין התוויות */
             }
             input[type="text"], input[type="tel"], input[type="number"], select {
-                padding: 6px;
+                padding: 6px; /* מקטין את הריפוד של השדות */
             }
             .product label {
-                font-size: 0.9em;
+                font-size: 0.9em; /* מקטין את גודל הפונטים של התוויות */
             }
             .product input[type="number"] {
-                width: 50px;
+                width: 50px; /* מקטין את רוחב השדות של הכמות */
             }
             button {
-                font-size: 0.9em;
+                font-size: 0.9em; /* מקטין את גודל הפונטים של הכפתור */
+            }
+            .image-container {
+                height: 350px; /* שינוי גובה התמונה */
+                
             }
         }
     </style>
