--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             margin-left: 10px;
         }
         .image-container {
+            display: none;
             width: auto;
             height: 100vh;
             overflow: hidden;
@@ -157,7 +158,7 @@
             .container {
                 flex-direction: column; /* מסדר את התוכן בצורה עמודית */
                 padding: 10px; /* מקטין את הריפוד */
-                margin-top: 300px; /* מוסיף מרווח מעלית */
+                margin-top: 320px; /* מוסיף מרווח מעלית */
             }
             h1, h2 {
                 font-size: 1.5em; /* מקטין את גודל הכותרות */
@@ -178,7 +179,7 @@
                 font-size: 0.9em; /* מקטין את גודל הפונטים של הכפתור */
             }
             .image-container {
-                height: 300px; /* שינוי גובה התמונה */
+                height: 350px; /* שינוי גובה התמונה */
                 
             }
         }
