--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             }
             .image-container {
                 height: 350px; /* שינוי גובה התמונה */
+                display: none;
                 
             }
         }
