--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
             margin-left: 10px;
         }
         .image-container {
-            display: none;
             width: auto;
             height: 100vh;
             overflow: hidden;
@@ -149,12 +148,12 @@
             justify-content: left;
         }
         #pharmacyImage {
-            width: 100%;
-            height: 100%; /* גובה מלא של התמונה */
-            object-fit: cover; /* התאמת התמונה למיכל */
+            display: none;
+            height: 100%;
+            width:auto;
+            border-radius: 8px;
         }
-        /* הערות למובייל */
-        @media (max-width: 600px) {
+       @media (max-width: 600px) {
             .container {
                 flex-direction: column; /* מסדר את התוכן בצורה עמודית */
                 padding: 10px; /* מקטין את הריפוד */
@@ -180,7 +179,6 @@
             }
             .image-container {
                 height: 350px; /* שינוי גובה התמונה */
-                display: none;
                 
             }
         }
