--- a/index.html
+++ b/index.html
@@ -179,8 +179,12 @@
             }
             .image-container {
                 height: 350px; 
+            
             }
-        }
+            .container.margin-top-320 {
+                margin-top: 320px;
+            } 
+       }
     </style>
 </head>
 <body>
