--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             height: 100vh;
             overflow: hidden;
             position: fixed;
-            left: 0;
+            left: 5px;
             top: 0;
             display: flex;
             align-items: center;
@@ -250,12 +250,12 @@
     const productList = {
         pharmacy: [
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
-            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice: 12.90, bulkThreshold: 100},
+            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20},
+            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.90, bulkThreshold: 1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 29.00},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
@@ -264,7 +264,7 @@
         future_pharmacy: [
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold: 100},
-            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice: 12.90, bulkThreshold: 100},
+            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1 - רוקחים עתיד', price: 2.90},
             {id: 'quantity5', name: 'בדיקת הריון 2 - רוקחים עתיד', price: 5.20},
@@ -272,18 +272,18 @@
             {id: 'quantity7', name: 'בדיקת ביוץ "בשעה טובה"', price: 29.90},
             {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', price: 21.00},
             {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20},
+            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20,bulkPrice: 15.90, bulkThreshold: 1},
             {id: 'quantity12', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 29.00}
         ],
         shrem_pharmacy: [
-            {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold: 100},
-            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice:12.90, bulkThreshold: 100},
-            {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90},
+            {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
+            {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
+            {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20},
+            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.90, bulkThreshold: 1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 29.00},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
@@ -350,11 +350,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'https://bmt-mabar.github.io/OrderSheet1/%D7%91%D7%AA%D7%99%20%D7%9E%D7%A8%D7%A7%D7%97%D7%AA.jpeg'; 
+            pharmacyImage.src = 'https://raw.githubusercontent.com/BMT-mabar/OrderSheet1/main/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%92%D7%95%D7%A1%D7%98%20%2008-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'https://bmt-mabar.github.io/OrderSheet1/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%A8%D7%95%D7%A7%D7%97%D7%99%D7%9D%20%D7%A2%D7%AA%D7%99%D7%93%20.pdf.png'; 
+            pharmacyImage.src = 'https://raw.githubusercontent.com/BMT-mabar/OrderSheet1/main/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%A8%D7%95%D7%A7%D7%97%D7%99%D7%9D%20%D7%A2%D7%AA%D7%99%D7%93%20%D7%90%D7%95%D7%92%D7%95%D7%A1%D7%98.png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'https://bmt-mabar.github.io/OrderSheet1/%D7%91%D7%AA%D7%99%20%D7%9E%D7%A8%D7%A7%D7%97%D7%AA.jpeg'; 
+            pharmacyImage.src = 'https://raw.githubusercontent.com/BMT-mabar/OrderSheet1/main/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%92%D7%95%D7%A1%D7%98%20%2008-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
@@ -397,4 +397,3 @@
     </div>
 
 </html>
-
