--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/648145bd64294c36417cff319f02528a889173f3/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%A7%D7%98%D7%95%D7%91%D7%A8%2010-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/648145bd64294c36417cff319f02528a889173f3/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%A8%D7%95%D7%A7%D7%97%D7%99%D7%9D%20%D7%A2%D7%AA%D7%99%D7%93%20%D7%90%D7%95%D7%A7%D7%98%D7%95%D7%91%D7%A8.png'; 
+            pharmacyImage.src = 'טופס הזמנה רוקחים עתיד אוקטובר.png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/648145bd64294c36417cff319f02528a889173f3/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%A7%D7%98%D7%95%D7%91%D7%A8%2010-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
