--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/cd295b12f041b33da1138cdb5362570958fe9bd9/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%92%D7%95%D7%A1%D7%98%20%2008-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'https://github.com/BMT-mabar/OrderSheet1/blob/cd295b12f041b33da1138cdb5362570958fe9bd9/%D7%98%D7%95%D7%A4%D7%A1%20%D7%94%D7%96%D7%9E%D7%A0%D7%94%20%D7%90%D7%95%D7%92%D7%95%D7%A1%D7%98%20%2008-2024%20-%20%D7%A4%D7%A8%D7%98%D7%99%D7%99%D7%9D.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה רוקחים עתיד אוקטובר.png'; 
         } else if (placeType === 'shrem_pharmacy') {
             pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
         }
