--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
-            {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 29.00},
+            {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
@@ -274,7 +274,7 @@
             {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90},
             {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
             {id: 'quantity12', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
-            {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 29.00}
+            {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 33.90}
         ],
         shrem_pharmacy: [
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
@@ -284,7 +284,7 @@
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
-            {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 29.00},
+            {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
@@ -350,11 +350,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה בתי מרקחת פרטיים אוקטובר.png'; 
         } else if (placeType === 'future_pharmacy') {
             pharmacyImage.src = 'טופס הזמנה רוקחים עתיד אוקטובר.png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה אוקטובר 10-2024 - פרטיים.jpg'; 
+            pharmacyImage.src = 'טופס הזמנה בתי מרקחת פרטיים אוקטובר.png'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
