--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 <script style="direction: rtl ;">
     const productList = {
         pharmacy: [
+            {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24},
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
@@ -262,6 +263,7 @@
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
         ],
         future_pharmacy: [
+            {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
@@ -277,6 +279,7 @@
             {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 33.90}
         ],
         shrem_pharmacy: [
+            {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24},
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
