--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה בתי מרקחת פרטיים אוקטובר.png'; 
+            pharmacyImage.src = 'טופס בתי מרקחת פרטיים אוקטובר 2024 (חדש).png'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה רוקחים עתיד אוקטובר.png'; 
+            pharmacyImage.src = 'טופס בתי מרקחת רוקחים עתיד אוקטובר 2024 (חדש).png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה בתי מרקחת פרטיים אוקטובר.png'; 
+            pharmacyImage.src = 'טופס בתי מרקחת פרטיים אוקטובר 2024 (חדש).png'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
