--- a/index.html
+++ b/index.html
@@ -255,12 +255,14 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
+            {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
+            {id: 'quantity12', name: 'בדיקת ביוץ "בשעה טובה"', price: 29.90},
         ],
         future_pharmacy: [
             {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24},
@@ -285,12 +287,14 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
+            {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
+            {id: 'quantity12', name: 'בדיקת ביוץ "בשעה טובה"', price: 29.90},
         ]
     };
     
