--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', price: 18.90},
-            {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
+            {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 12.90, bulkThreshold:0},
+            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.20, bulkThreshold:0},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
@@ -275,8 +275,8 @@
             {id: 'quantity6', name: 'בדיקת הריון "בשעה טובה"', price: 18.90},
             {id: 'quantity7', name: 'בדיקת ביוץ "בשעה טובה"', price: 29.90},
             {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', price: 21.00},
-            {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
+            {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 12.90, bulkThreshold:0},
+            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.20, bulkThreshold:0},
             {id: 'quantity12', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 33.90}
         ],
@@ -288,8 +288,8 @@
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
             {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', price: 18.90},
-            {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90},
-            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 15.20},
+            {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 12.90, bulkThreshold:0},
+            {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.20, bulkThreshold:0},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
