--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'טופס בתי מרקחת פרטיים נובמבר 2024 (חדש) (1).png'; 
+            pharmacyImage.src = 'דצמבר בתי מרקחת פרטיים.png'; 
         } else if (placeType === 'future_pharmacy') {
             pharmacyImage.src = 'טופס בתי מרקחת רוקחים עתיד נובמבר 2024 (חדש) (1).png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'טופס בתי מרקחת פרטיים נובמבר 2024 (חדש) (1).png'; 
+            pharmacyImage.src = 'דצמבר בתי מרקחת פרטיים.png'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
