--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         if (placeType === 'pharmacy') {
             pharmacyImage.src = 'דצמבר בתי מרקחת פרטיים.png'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'טופס בתי מרקחת רוקחים עתיד נובמבר 2024 (חדש) (1).png'; 
+            pharmacyImage.src = 'רוקחים עתיד דצמבר.png'; 
         } else if (placeType === 'shrem_pharmacy') {
             pharmacyImage.src = 'דצמבר בתי מרקחת פרטיים.png'; 
         }
