--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         if (placeType === 'pharmacy') {
             pharmacyImage.src = 'טופס הזמנה 01-25 פרטיים.png'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'רוקחים עתיד דצמבר.png'; 
+            pharmacyImage.src = 'טופס הזמנה 01-25 רוקחים עתיד.png'; 
         } else if (placeType === 'shrem_pharmacy') {
             pharmacyImage.src = 'טופס הזמנה 01-25 פרטיים.png'; 
         }
