--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90},
         ],
         future_pharmacy: [
-            {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 20},
+            {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24,  bulkPrice: 20, bulkThreshold:1},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkThreshold:50, bonusQuantity: 5},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
@@ -275,8 +275,8 @@
             {id: 'quantity6', name: '"בדיקת הריון "בשעה טובה', price: 18.90},
             {id: 'quantity7', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90},
             {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', price: 21.00},
-            {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 12.90, bulkThreshold:1},
-            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 15.20, bulkThreshold:1},
+            {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90, },
+            {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20,},
             {id: 'quantity12', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים', price: 33.90}
         ],
