--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
                     productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n\r\n`;
 
                     // אם נוסף בונוס, נוסיף זאת למשתנה productBonus
-                    const bonusCount = bonusQuantity ;
-                    if (bonusCount > 0) {
+                    if bonusQuantit>0;
+                    {
                         productBonus += `- ${product.name}\r\n   כמות בונוס: ${bonusCount}\r\n\r\n`;
                     }
 
