--- a/index.html
+++ b/index.html
@@ -402,13 +402,14 @@
                     // בדיקת בונוס
                     let bonusCount = 0;
                     if (product.bonusQuantity && product.bulkThreshold && quantity >= product.bulkThreshold) {
-                        bonusCount = product.bonusQuantity;
+                        productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n`;
+                    ;
                     }
 
                     // כותבים את שם המוצר וכמות
-                    productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n`;
+                    
                     // אם bonusCount>0 נציג:
-                    if (bonusCount > 0) {
+                    if bonusCount >= product.bilkThreshold and product.bonusQuantity > 0    {
                         productSummary += `   בונוס למוצר זה: ${bonusCount}\r\n`;
                     }
                     productSummary += `\r\n`; // רווח בין מוצרים
@@ -430,6 +431,7 @@
 מוצרים בהזמנה:
 ----------------
 ${productSummary}
+
 
 סיכום:
 ----------------
