--- a/index.html
+++ b/index.html
@@ -265,16 +265,9 @@
             
         ],
         future_pharmacy: [
-            {
-              id: 'quantity1',
-              name: 'פורמט עט - NO STEP בדיקות דלקת גרון',
-              price: 19.90,
-              bulkThreshold: 50,
-              bonusQuantity: 5
-            },
-            
             {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24, bulkPrice: 20, bulkThreshold:1},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
+            {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkThreshold: 50, bonusQuantity: 5},
             {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90},
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90},
             {id: 'quantity4', name: 'בדיקת הריון 1 - רוקחים עתיד', price: 2.90},
