--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה 02-25 פרטיים.png'; 
+            pharmacyImage.src = 'טופס הזמנה מרץ פרטיים.jpg'; 
         } else if (placeType === 'future_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה 02-25  רוקחים עתיד.png'; 
+            pharmacyImage.src = 'טופס הזמנה 03-25  רוקחים עתיד.png'; 
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה 02-25 פרטיים.png'; 
+            pharmacyImage.src = 'טופס הזמנה מרץ פרטיים.jpg'; 
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
