--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
             </div>
 
             <div id="totalPriceContainer">
-                <div style="text-align: center;" id="totalPriceLabel">:סה\"כ לתשלום</div>
-                <div style="direction: rtl;" id="preTaxPrice">סה\"כ לתשלום ללא מע\"מ: 0 ש\"ח</div>
-                <div style="direction: rtl;" id="totalPriceWithTax">סה\"כ לתשלום כולל מע\"מ: 0 ש\"ח</div>
+                <div style="text-align: center;" id="totalPriceLabel">:סה"כ לתשלום</div>
+                <div style="direction: rtl;" id="preTaxPrice">סה"כ לתשלום ללא מע"מ: 0 ש"ח</div>
+                <div style="direction: rtl;" id="totalPriceWithTax">סה"כ לתשלום כולל מע"מ: 0 ש"ח</div>
             </div>
             <div style="direction: rtl;" id="creditCardCheckbox">
                 <label style="font-weight: bold;" for="creditCard">
@@ -264,14 +264,14 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
-            {id: 'quantity13', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
+            {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
-            {id: 'quantity12', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90}
+            {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90}
         ],
         future_pharmacy: [
             {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24, bulkPrice: 20, bulkThreshold:1},
@@ -281,8 +281,8 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1 - רוקחים עתיד', price: 2.90},
             {id: 'quantity5', name: 'בדיקת הריון 2 - רוקחים עתיד', price: 5.20},
-            {id: 'quantity6', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
-            {id: 'quantity7', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90},
+            {id: 'quantity6', name: ''"בדיקת הריון "בשעה טובה', price: 18.90},
+            {id: 'quantity7', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90},
             {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', price: 21.00},
             {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
@@ -296,14 +296,14 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
-            {id: 'quantity13', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
+            {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
-            {id: 'quantity12', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90}
+            {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90}
         ]
     };
 
@@ -370,8 +370,8 @@
         }
         const preTaxTotal = total;
         const taxTotal = preTaxTotal * 1.18;
-        document.getElementById('preTaxPrice').innerText = `סה\"כ ללא מע\"מ: ${preTaxTotal.toFixed(2)} ש\"ח`;
-        document.getElementById('totalPriceWithTax').innerText = `סה\"כ כולל מע\"מ: ${taxTotal.toFixed(2)} ש\"ח`;
+        document.getElementById('preTaxPrice').innerText = `סה"כ ללא מע"מ: ${preTaxTotal.toFixed(2)} ש"ח`;
+        document.getElementById('totalPriceWithTax').innerText = `סה"כ כולל מע"מ: ${taxTotal.toFixed(2)} ש"ח`;
     }
 
     function updateImage() {
@@ -403,15 +403,25 @@
                 const quantityInput = document.getElementById(product.id);
                 if (quantityInput && parseInt(quantityInput.value) > 0) {
                     const quantity = parseInt(quantityInput.value);
-                    
+
                     // חישוב בונוס
                     let bonusCount = 0;
                     if (product.bonusQuantity && product.bulkThreshold && quantity >= product.bulkThreshold) {
                         bonusCount = product.bonusQuantity;
                     }
 
+                    // קביעת המחיר בפועל
+                    let actualPrice = product.price;
+                    if (product.bulkPrice !== undefined && product.bulkThreshold && quantity >= product.bulkThreshold) {
+                        actualPrice = product.bulkPrice;
+                    }
+
+                    // מחיר כולל למוצר
+                    let lineTotal = actualPrice * quantity;
+
                     // בניית השורה למוצר
-                    productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n`;
+                    productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n   מחיר ליחידה: ${actualPrice} ש\"ח\r\n   סה\"כ למוצר זה: ${lineTotal.toFixed(2)} ש\"ח\r\n`;
+
                     if (bonusCount > 0) {
                         productSummary += `   בונוס למוצר זה: ${bonusCount}\r\n`;
                     }
@@ -425,28 +435,13 @@
 
         // סיכום להזמנה
         const shortOrderDetails = 
-`פרטי המזמין:
-----------------
-שם המזמין: ${customerName}
-סוג המקום: ${placeType}
-שם המקום: ${placeName}
-מספר פלאפון: ${phoneNumber}
-
-מוצרים בהזמנה:
-----------------
-${productSummary}
-
-סיכום:
-----------------
-${preTaxPrice}
-${totalPriceWithTax}
-`;
+`פרטי המזמין:\r\n----------------\r\nשם המזמין: ${customerName}\r\nסוג המקום: ${placeType}\r\nשם המקום: ${placeName}\r\nמספר פלאפון: ${phoneNumber}\r\n\r\nמוצרים בהזמנה:\r\n----------------\r\n${productSummary}\r\n\r\nסיכום:\r\n----------------\r\n${preTaxPrice}\r\n${totalPriceWithTax}\r\n`;
 
         // הכנסי כאן את ה-Service ID וה-Template ID שלך מ-EmailJS
         const serviceID = 'service_ja10oz8';
         const templateID = 'template_cbiw9df';
 
-        // זהו האובייקט שמכיל את הפרטים שיופיעו במייל (ע\"פ המשתנים בתבנית EmailJS)
+        // זהו האובייקט שמכיל את הפרטים שיופיעו במייל (ע"פ המשתנים בתבנית EmailJS)
         const templateParams = {
             customer_name: customerName,
             place_type: placeType,
